# Steam2Immich

./: .env.example  .gitignore  README.md  app_names_overrides.json  config.py  main.py  matcher.py  pyproject.toml  requirements.txt
steam2immich/: __init__.py  audit_state.py  config.py  immich_client.py  logger.py  main.py  matcher.py  metadata_writer.py  models.py  report_writer.py  scanner.py  steam_apps.py  sync_service.py  upload_state.py  vdf_parser.py
tests/: conftest.py  test_audit_state.py  test_config.py  test_immich_client.py  test_matcher.py  test_metadata_writer.py  test_report_writer.py  test_scanner.py  test_steam_apps.py  test_sync_service.py  test_upload_state.py  test_vdf_parser.py
tests/fixtures/steam_root/steamapps/: appmanifest_1086940.acf
tests/fixtures/steam_root/userdata/test-user/760/: screenshots.vdf
tests/fixtures/steam_root/userdata/test-user/760/remote/1086940/screenshots/: ignored.txt
